# wb

./: CLAUDE.md  Cargo.toml  README.md  flake.nix
src/: cli.rs  config.rs  error.rs  git.rs  main.rs  output.rs  resolve.rs  worktree.rs
src/commands/: copy.rs  create.rs  delete.rs  edit_description.rs  init_repo.rs  list.rs  mod.rs  rename.rs  show_current.rs  show_path.rs  upstream.rs
src/shell/: bash.rs  fish.rs  mod.rs  zsh.rs
tests/: init.rs
