[package]
name = "wb"
version = "0.2.0"
edition = "2021"
description = "git-branch interface backed by git-worktree"
license = "MIT"
repository = "https://github.com/yusukeshib/wb"
keywords = ["git", "worktree", "branch", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "wb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "string"] }
anyhow = "1"
thiserror = "2"
colored = "3"
dirs = "6"
glob-match = "0.2"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
